# saveit

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md
.github/workflows/: deploy.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: dcfe68fe7e75_baseline_schema.py
backend/app/: admin.py  categorize.py  config.py  db.py  main.py  models.py  schemas.py  seed.py
backend/app/parsers/: __init__.py  amex.py  base.py  chase.py  santander.py
backend/app/routers/: admin.py  analytics.py  rules.py  settings.py  statements.py  transactions.py
backend/app/services/: azure_di.py  settings.py
backend/finapp_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_parsers.py  test_santander.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: RangePicker.tsx
frontend/src/pages/: Dashboard.tsx  Rules.tsx  Settings.tsx  Transactions.tsx  Upload.tsx
infra/: main.bicep  main.parameters.json
